PL2_CristianMárquez_MarcosFuster_RubenBarroso/basic/BasicParser.py
# Generated from Basic.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BasicParser ( Parser ):

    grammarFileName = "Basic.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'<'", "'>'", "'<='", "'>='", "'+'", 
                     "'-'", "'*'", "'/'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "LET_KW", "PRINT_KW", "INPUT_KW", "IF_KW", "ELSE_KW", 
                      "FOR_KW", "TO_KW", "NEXT_KW", "WHILE_KW", "REPEAT_KW", 
                      "UNTIL_KW", "CONTINUE_KW", "EXIT_KW", "END_KW", "THEN_KW", 
                      "MOD_KW", "VAL_KW", "LEN_KW", "ISNAN_KW", "ID", "NUMBER", 
                      "STRING_LITERAL", "NEWLINE", "COMMENT", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_letStmt = 2
    RULE_opStmt = 3
    RULE_printStmt = 4
    RULE_inputStmt = 5
    RULE_ifStmt = 6
    RULE_forStmt = 7
    RULE_whileStmt = 8
    RULE_repeatStmt = 9
    RULE_keyStmt = 10
    RULE_condition = 11
    RULE_comparisonOp = 12
    RULE_expression = 13
    RULE_functionCall = 14

    ruleNames =  [ "program", "statement", "letStmt", "opStmt", "printStmt", 
                   "inputStmt", "ifStmt", "forStmt", "whileStmt", "repeatStmt", 
                   "keyStmt", "condition", "comparisonOp", "expression", 
                   "functionCall" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    LET_KW=12
    PRINT_KW=13
    INPUT_KW=14
    IF_KW=15
    ELSE_KW=16
    FOR_KW=17
    TO_KW=18
    NEXT_KW=19
    WHILE_KW=20
    REPEAT_KW=21
    UNTIL_KW=22
    CONTINUE_KW=23
    EXIT_KW=24
    END_KW=25
    THEN_KW=26
    MOD_KW=27
    VAL_KW=28
    LEN_KW=29
    ISNAN_KW=30
    ID=31
    NUMBER=32
    STRING_LITERAL=33
    NEWLINE=34
    COMMENT=35
    WS=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BasicParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicParser.StatementContext)
            else:
                return self.getTypedRuleContext(BasicParser.StatementContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(BasicParser.NEWLINE)
            else:
                return self.getToken(BasicParser.NEWLINE, i)

        def getRuleIndex(self):
            return BasicParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = BasicParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 30
                    self.statement()
                    self.state = 32 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 31
                        self.match(BasicParser.NEWLINE)
                        self.state = 34 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==34):
                            break
             
                self.state = 40
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 2175987712) != 0):
                self.state = 41
                self.statement()


            self.state = 44
            self.match(BasicParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def letStmt(self):
            return self.getTypedRuleContext(BasicParser.LetStmtContext,0)


        def opStmt(self):
            return self.getTypedRuleContext(BasicParser.OpStmtContext,0)


        def printStmt(self):
            return self.getTypedRuleContext(BasicParser.PrintStmtContext,0)


        def inputStmt(self):
            return self.getTypedRuleContext(BasicParser.InputStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(BasicParser.IfStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(BasicParser.ForStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(BasicParser.WhileStmtContext,0)


        def repeatStmt(self):
            return self.getTypedRuleContext(BasicParser.RepeatStmtContext,0)


        def keyStmt(self):
            return self.getTypedRuleContext(BasicParser.KeyStmtContext,0)


        def getRuleIndex(self):
            return BasicParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = BasicParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 55
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.letStmt()
                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.opStmt()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.printStmt()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 4)
                self.state = 49
                self.inputStmt()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 5)
                self.state = 50
                self.ifStmt()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 6)
                self.state = 51
                self.forStmt()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 7)
                self.state = 52
                self.whileStmt()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 8)
                self.state = 53
                self.repeatStmt()
                pass
            elif token in [23, 24]:
                self.enterOuterAlt(localctx, 9)
                self.state = 54
                self.keyStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LetStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET_KW(self):
            return self.getToken(BasicParser.LET_KW, 0)

        def ID(self):
            return self.getToken(BasicParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(BasicParser.ExpressionContext,0)


        def getRuleIndex(self):
            return BasicParser.RULE_letStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLetStmt" ):
                listener.enterLetStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLetStmt" ):
                listener.exitLetStmt(self)




    def letStmt(self):

        localctx = BasicParser.LetStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_letStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(BasicParser.LET_KW)
            self.state = 58
            self.match(BasicParser.ID)
            self.state = 59
            self.match(BasicParser.T__0)
            self.state = 60
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OpStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BasicParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(BasicParser.ExpressionContext,0)


        def getRuleIndex(self):
            return BasicParser.RULE_opStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpStmt" ):
                listener.enterOpStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpStmt" ):
                listener.exitOpStmt(self)




    def opStmt(self):

        localctx = BasicParser.OpStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_opStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(BasicParser.ID)
            self.state = 63
            self.match(BasicParser.T__0)
            self.state = 64
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT_KW(self):
            return self.getToken(BasicParser.PRINT_KW, 0)

        def expression(self):
            return self.getTypedRuleContext(BasicParser.ExpressionContext,0)


        def getRuleIndex(self):
            return BasicParser.RULE_printStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStmt" ):
                listener.enterPrintStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStmt" ):
                listener.exitPrintStmt(self)




    def printStmt(self):

        localctx = BasicParser.PrintStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_printStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(BasicParser.PRINT_KW)
            self.state = 67
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InputStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INPUT_KW(self):
            return self.getToken(BasicParser.INPUT_KW, 0)

        def STRING_LITERAL(self):
            return self.getToken(BasicParser.STRING_LITERAL, 0)

        def ID(self):
            return self.getToken(BasicParser.ID, 0)

        def getRuleIndex(self):
            return BasicParser.RULE_inputStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInputStmt" ):
                listener.enterInputStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInputStmt" ):
                listener.exitInputStmt(self)




    def inputStmt(self):

        localctx = BasicParser.InputStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_inputStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(BasicParser.INPUT_KW)
            self.state = 70
            self.match(BasicParser.STRING_LITERAL)
            self.state = 71
            self.match(BasicParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF_KW(self):
            return self.getToken(BasicParser.IF_KW, 0)

        def condition(self):
            return self.getTypedRuleContext(BasicParser.ConditionContext,0)


        def THEN_KW(self):
            return self.getToken(BasicParser.THEN_KW, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(BasicParser.NEWLINE)
            else:
                return self.getToken(BasicParser.NEWLINE, i)

        def END_KW(self):
            return self.getToken(BasicParser.END_KW, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicParser.StatementContext)
            else:
                return self.getTypedRuleContext(BasicParser.StatementContext,i)


        def ELSE_KW(self):
            return self.getToken(BasicParser.ELSE_KW, 0)

        def getRuleIndex(self):
            return BasicParser.RULE_ifStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)




    def ifStmt(self):

        localctx = BasicParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ifStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(BasicParser.IF_KW)
            self.state = 74
            self.condition()
            self.state = 75
            self.match(BasicParser.THEN_KW)
            self.state = 76
            self.match(BasicParser.NEWLINE)
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2175987712) != 0):
                self.state = 77
                self.statement()
                self.state = 78
                self.match(BasicParser.NEWLINE)
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==16:
                self.state = 85
                self.match(BasicParser.ELSE_KW)
                self.state = 86
                self.match(BasicParser.NEWLINE)
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2175987712) != 0):
                    self.state = 87
                    self.statement()
                    self.state = 88
                    self.match(BasicParser.NEWLINE)
                    self.state = 94
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 97
            self.match(BasicParser.END_KW)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR_KW(self):
            return self.getToken(BasicParser.FOR_KW, 0)

        def ID(self):
            return self.getToken(BasicParser.ID, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(BasicParser.ExpressionContext,i)


        def TO_KW(self):
            return self.getToken(BasicParser.TO_KW, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(BasicParser.NEWLINE)
            else:
                return self.getToken(BasicParser.NEWLINE, i)

        def NEXT_KW(self):
            return self.getToken(BasicParser.NEXT_KW, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicParser.StatementContext)
            else:
                return self.getTypedRuleContext(BasicParser.StatementContext,i)


        def getRuleIndex(self):
            return BasicParser.RULE_forStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStmt" ):
                listener.enterForStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStmt" ):
                listener.exitForStmt(self)




    def forStmt(self):

        localctx = BasicParser.ForStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_forStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(BasicParser.FOR_KW)
            self.state = 100
            self.match(BasicParser.ID)
            self.state = 101
            self.match(BasicParser.T__0)
            self.state = 102
            self.expression(0)
            self.state = 103
            self.match(BasicParser.TO_KW)
            self.state = 104
            self.expression(0)
            self.state = 105
            self.match(BasicParser.NEWLINE)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2175987712) != 0):
                self.state = 106
                self.statement()
                self.state = 107
                self.match(BasicParser.NEWLINE)
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 114
            self.match(BasicParser.NEXT_KW)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE_KW(self):
            return self.getToken(BasicParser.WHILE_KW, 0)

        def condition(self):
            return self.getTypedRuleContext(BasicParser.ConditionContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(BasicParser.NEWLINE)
            else:
                return self.getToken(BasicParser.NEWLINE, i)

        def END_KW(self):
            return self.getToken(BasicParser.END_KW, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicParser.StatementContext)
            else:
                return self.getTypedRuleContext(BasicParser.StatementContext,i)


        def getRuleIndex(self):
            return BasicParser.RULE_whileStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStmt" ):
                listener.enterWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStmt" ):
                listener.exitWhileStmt(self)




    def whileStmt(self):

        localctx = BasicParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_whileStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(BasicParser.WHILE_KW)
            self.state = 117
            self.condition()
            self.state = 118
            self.match(BasicParser.NEWLINE)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2175987712) != 0):
                self.state = 119
                self.statement()
                self.state = 120
                self.match(BasicParser.NEWLINE)
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 127
            self.match(BasicParser.END_KW)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RepeatStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REPEAT_KW(self):
            return self.getToken(BasicParser.REPEAT_KW, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(BasicParser.NEWLINE)
            else:
                return self.getToken(BasicParser.NEWLINE, i)

        def UNTIL_KW(self):
            return self.getToken(BasicParser.UNTIL_KW, 0)

        def condition(self):
            return self.getTypedRuleContext(BasicParser.ConditionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicParser.StatementContext)
            else:
                return self.getTypedRuleContext(BasicParser.StatementContext,i)


        def getRuleIndex(self):
            return BasicParser.RULE_repeatStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRepeatStmt" ):
                listener.enterRepeatStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRepeatStmt" ):
                listener.exitRepeatStmt(self)




    def repeatStmt(self):

        localctx = BasicParser.RepeatStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_repeatStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(BasicParser.REPEAT_KW)
            self.state = 130
            self.match(BasicParser.NEWLINE)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2175987712) != 0):
                self.state = 131
                self.statement()
                self.state = 132
                self.match(BasicParser.NEWLINE)
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 139
            self.match(BasicParser.UNTIL_KW)
            self.state = 140
            self.condition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KeyStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONTINUE_KW(self):
            return self.getToken(BasicParser.CONTINUE_KW, 0)

        def EXIT_KW(self):
            return self.getToken(BasicParser.EXIT_KW, 0)

        def getRuleIndex(self):
            return BasicParser.RULE_keyStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKeyStmt" ):
                listener.enterKeyStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKeyStmt" ):
                listener.exitKeyStmt(self)




    def keyStmt(self):

        localctx = BasicParser.KeyStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_keyStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            _la = self._input.LA(1)
            if not(_la==23 or _la==24):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(BasicParser.ExpressionContext,i)


        def comparisonOp(self):
            return self.getTypedRuleContext(BasicParser.ComparisonOpContext,0)


        def getRuleIndex(self):
            return BasicParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)




    def condition(self):

        localctx = BasicParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_condition)
        try:
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.expression(0)
                self.state = 145
                self.comparisonOp()
                self.state = 146
                self.expression(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.expression(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparisonOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BasicParser.RULE_comparisonOp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparisonOp" ):
                listener.enterComparisonOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparisonOp" ):
                listener.exitComparisonOp(self)




    def comparisonOp(self):

        localctx = BasicParser.ComparisonOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_comparisonOp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 62) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(BasicParser.ExpressionContext,i)


        def functionCall(self):
            return self.getTypedRuleContext(BasicParser.FunctionCallContext,0)


        def NUMBER(self):
            return self.getToken(BasicParser.NUMBER, 0)

        def STRING_LITERAL(self):
            return self.getToken(BasicParser.STRING_LITERAL, 0)

        def ID(self):
            return self.getToken(BasicParser.ID, 0)

        def MOD_KW(self):
            return self.getToken(BasicParser.MOD_KW, 0)

        def getRuleIndex(self):
            return BasicParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = BasicParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 26
        self.enterRecursionRule(localctx, 26, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.state = 154
                self.match(BasicParser.T__9)
                self.state = 155
                self.expression(0)
                self.state = 156
                self.match(BasicParser.T__10)
                pass
            elif token in [28, 29, 30]:
                self.state = 158
                self.functionCall()
                pass
            elif token in [32]:
                self.state = 159
                self.match(BasicParser.NUMBER)
                pass
            elif token in [33]:
                self.state = 160
                self.match(BasicParser.STRING_LITERAL)
                pass
            elif token in [31]:
                self.state = 161
                self.match(BasicParser.ID)
                pass
            else:
                raise NoViableAltException(self)
